# Operating-System

./: README.md
file/: sharedmem2.c
lab10/: CMakeLists.txt  clock.c  main  ramEmu.c  ramEmu.h  virtualMem.c
lab12/iFs v1/: checkdisk.c  diskemu.c  diskimage  fsshell  inode chain illustration.pptx  makedisk
lab2/: guiruttien_process  guiruttien_process.c  sharedmem2  sharedmem2.c
lab3/: guiruttien  guiruttien.c  guiruttien_luanphien1  guiruttien_luanphien1.c  guiruttien_luanphien2  guiruttien_luanphien2.c  mythread  mythread.c
lab4/: guiruttien_peterson.c  producer.c  producers_consumers  producers_consumers.c  producers_consumers_process  producers_consumers_process.c
lab5/: philosophers_deadlock.c  philosophers_sem.c  reader_writer  reader_writer.c
lab6/: barbershop.c  check  check.c  makewater.c  reader_writer2.c
lab7/: CMakeLists.txt  cavevisit  cavevisit.c
lab8/: philosophers_monitor.c  producers_consumers_monitor.c  reader_writer_monitor.c  reader_writer_monitor2  reader_writer_monitor2.c
lab9/: CMakeLists.txt  bitmap  bitmap.c  linkedlist  linkedlist.c
mid/: CMakeLists.txt  bai1  bai1.c  bai2.c
myfork/: anonpipe2.c  myfork  myfork.c  sharedmem1.c
